@@ -8,3 +8,7 @@ Changes and New Features in 1.1 (2021-02-23):
 Changes and New Features in 1.2 (2021-03-11):
 	* Due to some challenges with XPtr's, adding an alternative
 	storage mechanism for the trees as strings
+
+Changes and New Features in 1.3 (2021-09-10):
+	* varcount now returned per MCMC iteration
+	with varcount.mean for their mean
